[package]
name = "n64swap"
version = "1.0.0"
authors = ["zochwar <zochwar@protonmail.com>"]
edition = "2021"
description = "A Nintendo64 byte-swapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }

[profile.release]
strip = true
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
